<resources>
    <string name="app_name">Словарь</string>
    <string name="str_no_word">Словарь пуст</string>
    <string name="str_add_new_word">Добавить новое слово</string>
    <string name="str_add_word">Добавьте слово и перевод</string>
    <string name="str_see_answer">Увидеть ответ</string>
    <string name="str_foreign_word">Введите иностранное слово</string>
    <string name="str_new_answer">Введите перевод</string>
    <string name="str_save_to_vocabulary">Сохранить в словарь</string>
    <string name="str_next_word">Следующее слово</string>
    <string name="str_learn_word">Запоминание слов</string>
</resources>