<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".InputNewWord">

    <Button
        android:id="@+id/btn_save_new_word"
        style="@style/style_btn"
        android:backgroundTint="@color/orange_light"
        android:text="@string/str_save_to_vocabulary"
        app:layout_constraintBottom_toTopOf="@+id/et_new_foreign_word"
        app:layout_constraintEnd_toEndOf="@+id/et_new_foreign_word"
        app:layout_constraintStart_toStartOf="@+id/et_new_foreign_word"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_new_foreign_word"
        android:hint="@string/str_foreign_word"
        app:layout_constraintBottom_toTopOf="@+id/et_new_answer"
        app:layout_constraintEnd_toEndOf="@+id/et_new_answer"
        app:layout_constraintStart_toStartOf="@+id/et_new_answer"
        app:layout_constraintTop_toBottomOf="@+id/btn_save_new_word"
        style="@style/style_et" />

    <EditText
        android:id="@+id/et_new_answer"
        android:hint="@string/str_new_answer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_new_foreign_word"
        style="@style/style_et" />

</androidx.constraintlayout.widget.ConstraintLayout>